--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,16 @@ main {
     text-align: center;
 }
 
+.row-add-activity {
+    display: grid;
+    justify-content: center;
+    margin: 0;
+}
+
+.row-add-activity > .col {
+    margin: 10px auto;
+}
+
 @media screen and (max-width: 768px) {
     .col-1, .col-2, .col {
         margin: 25px auto;
@@ -108,6 +118,16 @@ main {
     .col {
         flex: 1 100%;
         text-align: center;
+    }
+    .col-3 {
+        display: flex;
+        align-items: center;
+    }
+    .row-add-activity {
+        width: 50vw;
+        margin: auto;
+        display: grid;
+        justify-content: center;
     }
 }
 
@@ -178,4 +198,19 @@ textarea {
 
 a {
     color: black;
+}
+
+.add-activity {
+    display: flex;
+    border: solid rgb(35, 47, 55);
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(35, 47, 55);
+    margin-top: 1em;
+    border-radius: 50%;
+    width: 2em;
+    height: 2em;
 }
